welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: not found: type int
def remplirTableau1(hauteurMonde :int):Array[Color] = {
                                  ^